--- a/_posts\2019-09-30-differance.markdown.html
+++ b/_posts\2019-09-30-differance.markdown.html
@@ -23,16 +23,10 @@
 </head>
 <body><div id="readme" class="container"><article class="markdown-body entry-content"><hr>
 <p>layout: post
-title:  &quot;Looking into the House&quot;
-date:   2019-09-16 07:03:08 -0400</p>
-<h2 id="categories-update">categories: update</h2>
-<h3 id="house-of-leaves">House of Leaves</h3>
-<p>Even before I open the book, the cover illustration preped me up to be ready to navigate through a maze.</p>
-<p>What sort of maze?
-That I&apos;ll need to figure out as I read the book.</p>
-<p>Right after prepping me up for the maze it feels as thought the book is challenging or maybe even mocking me with &quot;This is not for you&quot;.</p>
-<p>Reading throught the introduction, hints that maybe it could be another one of Zampano&apos;s attempt to dissuade the reader of his work, both Johnny Truant and me. While that could indeed have been the case it only made me more curious and at this point I am empathazing with Johnny&apos;s curiosity, which is worrisome given how adversely the text affects him. The scariest part for me is the fact that I am enjoying the thrill and anticipation of this mystery that could potentially change me.</p>
-<h4 id="the-navidson-record">The Navidson Record</h4>
+title:  &quot;Differance&quot;
+date:   2019-09-30 07:07:08 -0400</p>
+<h2 id="categories-">categories:</h2>
+<p>Differance</p>
 </article></div><div style="background-color: #b4b2b2;width: 50px;height:50px;line-height: 50px;text-align: center;position: fixed;bottom: 10px;right: 10px;padding-top:5px;" onclick="document.documentElement.scrollTop = document.body.scrollTop =0;">
   <svg t="1533629773982" class="icon" style="" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="1035" xlink="http://www.w3.org/1999/xlink" width="40" height="40"><defs><style type="text/css">@font-face { font-family: uc-nexus-iconfont; src: url("chrome-extension://pogijhnlcfmcppgimcaccdkmbedjkmhi/res/font_9qmmi8b8jsxxbt9.woff") format("woff"), url("chrome-extension://pogijhnlcfmcppgimcaccdkmbedjkmhi/res/font_9qmmi8b8jsxxbt9.ttf") format("truetype"); }
   </style></defs><path d="M536.255427 195.182354c-7.804756-7.804756-17.966187-11.615549-28.311813-11.615549-9.43693 0-18.874883 3.449565-26.496467 10.163477-2.360767 1.452071-4.356214 3.267417-6.352685 5.262864L218.47792 455.611735c-15.607466 15.60542-15.607466 40.834011 0 56.43943 15.607466 15.607466 41.558511 15.607466 57.167001 0l193.46013-192.733583 0 600.526219c0 22.1423 17.787108 39.927361 39.927361 39.927361 22.140253 0 39.927361-17.785062 39.927361-39.927361L548.959773 319.317583 737.15704 508.422522c15.607466 15.607466 40.469714 15.607466 56.078203 0 15.607466-15.607466 15.425318-40.834011-0.182149-56.441477L536.255427 195.182354 536.255427 195.182354z" p-id="1036" fill="#333"/><path d="M101.784174 143.097092l816.674071 0c22.140253 0 39.925315-17.785062 39.925315-39.927361 0-22.140253-17.784038-39.925315-39.925315-39.925315L101.784174 63.244416c-22.140253 0-39.927361 17.785062-39.927361 39.925315C61.856813 125.31203 79.643921 143.097092 101.784174 143.097092L101.784174 143.097092z" p-id="1037" fill="#333"/></svg>
